<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.thmarx.cms</groupId>
	<artifactId>cms-parent</artifactId>
	<version>3.0.0</version>
	<packaging>pom</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<exec.mainClass>com.github.thmarx.cms.Startup</exec.mainClass>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
		<modules.version>1.3</modules.version>
		<jetty.version>12.0.4</jetty.version>
	</properties>
	<modules>
		<module>cms-api</module>
		<module>cms-server</module>
		<module>modules</module>
		<module>cms-filesystem</module>
		<module>cms-media</module>
		<module>cms-git</module>
	</modules>
	<inceptionYear>2023</inceptionYear>
	<organization>
		<name>Marx-Software</name>
	</organization>
	<licenses>
		<license>
			<name>GPL v3</name>
			<url>https://www.gnu.org/licenses/gpl-3.0.html</url>
		</license>
	</licenses>
	
	<dependencyManagement>
		<dependencies>
			
			<dependency>
				<groupId>com.github.thmarx.cms</groupId>
				<artifactId>cms-api</artifactId>
				<version>${project.version}</version>            
			</dependency>
			<dependency>
				<groupId>com.github.thmarx.cms</groupId>
				<artifactId>cms-filesystem</artifactId>
				<version>${project.version}</version>            
			</dependency>
			<dependency>
				<groupId>com.github.thmarx.cms</groupId>
				<artifactId>cms-media</artifactId>
				<version>${project.version}</version>            
			</dependency>
			<dependency>
				<groupId>com.github.thmarx.cms</groupId>
				<artifactId>cms-git</artifactId>
				<version>${project.version}</version>            
			</dependency>
			<dependency>
				<groupId>com.github.thmarx.modules</groupId>
				<artifactId>modules-manager</artifactId>
				<version>${modules.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.thmarx.modules</groupId>
				<artifactId>modules-api</artifactId>
				<version>${modules.version}</version>
			</dependency>
			
			<dependency>
				<groupId>com.github.usefulness</groupId>
				<artifactId>webp-imageio</artifactId>
				<version>0.5.1</version>
			</dependency>
			<dependency>
				<groupId>org.yaml</groupId>
				<artifactId>snakeyaml</artifactId>
				<version>2.2</version>            
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-server</artifactId>
				<version>${jetty.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.18.30</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.github.ben-manes.caffeine</groupId>
				<artifactId>caffeine</artifactId>
				<version>3.1.8</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>32.1.3-jre</version>
			</dependency>
			<dependency>
				<groupId>org.graalvm.polyglot</groupId>
				<artifactId>polyglot</artifactId>
				<version>23.1.1</version>
			</dependency>
			<dependency>
				<groupId>org.graalvm.js</groupId>
				<artifactId>js-language</artifactId>
				<version>23.1.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>2.21.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>2.21.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-slf4j2-impl</artifactId>
				<version>2.21.1</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>2.0.9</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
			<dependency>
				<groupId>org.jsoup</groupId>
				<artifactId>jsoup</artifactId>
				<version>1.16.1</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>3.24.2</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>5.6.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>5.6.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.10.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.awaitility</groupId>
				<artifactId>awaitility</artifactId>
				<version>4.2.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<dependencies>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>2.3.0</version>
				<configuration>
					<verbose>false</verbose>
					<licenseName>gpl_v3</licenseName>
				</configuration>
				<executions>
					<execution>
						<id>first</id>
						<goals>
							<goal>update-file-header</goal>
						</goals>
						<phase>process-sources</phase>
						<configuration>
							<licenseName>gpl_v3</licenseName>
							<roots>
								<root>src/main/java</root>
								<root>src/resources</root>
								<root>src/test</root>
							</roots>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.11</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	
	<repositories>
		<repository>
			<id>github-modules</id>
			<url>https://maven.pkg.github.com/thmarx/modules/</url>
		</repository>
	</repositories>
	
	<profiles>
		<profile>
			<id>dist</id>
		</profile>
	</profiles>
</project>
